Updated .gitignore, README, URLs.

--- a/pom.xml
+++ b/pom.xml
@@ -14,28 +14,28 @@
     <parent>
         <groupId>org.eurekaclinical</groupId>
         <artifactId>eurekaclinical-parent-standard-deps</artifactId>
-        <version>3</version>
+        <version>4-Alpha-4-SNAPSHOT</version>
     </parent>
 
-    <url>https://github.com/eurekaclinical/eurekaclinical-user-agreement-service.git</url>
+    <url>https://github.com/arpost/eurekaclinical-user-agreement-service.git</url>
 
     <scm>
-        <connection>scm:git:https://github.com/eurekaclinical/eurekaclinical-user-agreement-service.git</connection>
-        <developerConnection>scm:git:https://github.com/eurekaclinical/eurekaclinical-user-agreement-service.git</developerConnection>
-        <url>https://github.com/eurekaclinical/eurekaclinical-user-agreement-service.git</url>
+        <connection>scm:git:https://github.com/arpost/eurekaclinical-user-agreement-service.git</connection>
+        <developerConnection>scm:git:https://github.com/arpost/eurekaclinical-user-agreement-service.git</developerConnection>
+        <url>https://github.com/arpost/eurekaclinical-user-agreement-service.git</url>
         <tag>HEAD</tag>
     </scm>
 	
     <issueManagement>
         <system>GitHub</system>
-        <url>https://github.com/eurekaclinical/eurekaclinical-user-agreement-service/issues</url>
+        <url>https://github.com/arpost/eurekaclinical-user-agreement-service/issues</url>
     </issueManagement>
     
     <properties>
-        <eurekaclinical-user-agreement-client-version>2.3-Beta-1</eurekaclinical-user-agreement-client-version>
-        <eurekaclinical-common-version>5.0-Alpha-4</eurekaclinical-common-version>
-        <eurekaclinical-standard-apis-version>4.0-Alpha-3</eurekaclinical-standard-apis-version>
-        <cas-mock-version>2.1</cas-mock-version>
+        <eurekaclinical-user-agreement-client-version>2.3-Beta-2-SNAPSHOT</eurekaclinical-user-agreement-client-version>
+        <eurekaclinical-common-version>6.0-Alpha-1-SNAPSHOT</eurekaclinical-common-version>
+        <eurekaclinical-standard-apis-version>5.0-Alpha-1-SNAPSHOT</eurekaclinical-standard-apis-version>
+        <cas-mock-version>2.2-SNAPSHOT</cas-mock-version>
         <tomcat.httpsPort>8443</tomcat.httpsPort>
     </properties>
 	
